# FRD-QA

./: .gitignore  README.md  pyproject.toml  start
examples/: sample-inventory.json
qa/: checklist.md
references/: design-system-integration.md  improvement-backlog.md  improvement-loop.md  input-parsing.md  master-rules.md
reports/: 2026-07-23_FRD_HomeBanner_v0.9_QA.md  2026-07-23_Rubicon3.0_FRD_v1.4.8_QA.html  2026-07-23_Rubicon3.0_FRD_v1.4.8_QA.md  2026-07-23_pilot-validation.md  [Official] Rubicon 3.0_FRD_Ver.1.4.8_0720_DS-Conformance.html
reports/data/: 2026-07-23_Rubicon3.0_FRD_v1.4.8.json  [Official] Rubicon 3.0_FRD_Ver.1.4.8_0720_ds-conformance.json
src/frdqa/: __init__.py  cli.py
src/frdqa/data/: design-components-v1.6.json  design-system-v1.6.json  design-tokens-v1.6.json
tests/: test_cli.py
tools/: extract_fig_tokens.py  frd_ds_check.py  render_report.py
